yamlconfig/allowclient1todemoapp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allowclient2todemoappnoauth
  namespace: default
spec:
  description: Allow Client1 to demo app
  endpointSelector:
    matchLabels:
      app: demodeployment
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: client1
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
